--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
     <title>News Scraper</title>
+    <style>
+        body {
+            background-color: #F2F6D0
+        }
+
+        #wrapper {
+            width: 960px;
+            margin-left: auto;
+            margin-right: auto;
+            padding-top: 5%;
+        }
+
+        #articles {
+            display: inline-block;
+            overflow: auto;
+            width: 60%;
+            height: 700px;
+        }
+
+        #notes {
+            float: right;
+            width: 30%;
+        }
+
+        textarea,
+        input {
+            display: block;
+            width: 100%;
+            background-color: #FCF5C7;
+        }
+
+        input {
+            height: 36px;
+            font-size: 24px;
+        }
+
+        textarea {
+            height: 200px;
+            font-size: 18px;
+        }
+    </style>
 </head>
 
 <body>
     <div id="wrapper">
         <h1>Note Scraper</h1>
+        <h2><i>Here's whats going on</i></h2>
         <a href="/scrape" id="btn-scrape">1. Scrape</a>
         <a href="/articles" id="btn-articles">2. Articles</a>
 
