--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>News Scraper</title>
     <style>
         body {
-            background-color: #F2F6D0
+            background-color: rgb(37, 112, 173);
         }
 
         #wrapper {
@@ -52,7 +52,7 @@
 <body>
     <div id="wrapper">
         <h1>Note Scraper</h1>
-        <h2><i>Here's whats going on</i></h2>
+        <h2><i>Here's whats going on in r/Games</i></h2>
         <a href="/scrape" id="btn-scrape">1. Scrape</a>
         <a href="/articles" id="btn-articles">2. Articles</a>
 
